--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>hz's lab | 全栈开发者</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
+	<title>hz's lab | 全栈开发 | 外包接单</title>
+	<meta name="description" content="9年全栈开发,独立开发者,外包接单">  
+	<meta name="author" content="hz">
 
    <!-- mobile specific metas
    ================================================== -->
