--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
-	                  <a href="#modal-01" class="overlay">	                  	           
+	               	<img src="images/portfolio/holly.jpg" alt="Liberty">
+	                  <a href="https://mall.couthz.com/" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">Holly外贸商城</h3>	     					    
