--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    ================================================== -->
     <meta charset="utf-8" />
     <title>hz's lab | 全栈开发 | 外包接单</title>
-    <meta name="description" content="9年全栈开发,独立开发者,外包接单" />
+    <meta name="description" content="我是贺文,有8年TS全栈开发经验,可外包接单,微信号: couthz; 邮箱: couthz344304180@gmail.com;" />
     <meta name="author" content="hz" />
 
     <!-- mobile specific metas
