--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div class="row portfolio-content">
         <div class="col-twelve">
           <!-- portfolio-wrapper -->
-          <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+          <div id="folio-wrapper" class="block-1-3 block-mob-full stack">
             <a href="https://mall.couthz.com/" target="_blank">	                  	            
             <div class="bgrid folio-item">
               <div class="item-wrap">
@@ -409,21 +409,23 @@
            
             <!-- /folio-item -->
 
-            <!-- <div class="bgrid folio-item">
+            <a href="https://pharmcy.couthz.com" target="_blank">
+            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
-	                  <a href="#modal-05" class="overlay">             		                  
+	               	<img src="images/portfolio/pharmcy.jpg" alt="Lighthouse">
+	                  <div class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">在线药房系统</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  NextJs+NestJs开发的在线药房系统
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
-	                  </a>
+                    </div>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        		</div> 
+            </a>
 
             <!-- <div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -443,142 +445,7 @@
 
             <!-- modal popups - begin
 	            ============================================================= -->
-            <div id="modal-01" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Liberty</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Development</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-01 -->
-
-            <div id="modal-02" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Shutterbug</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Design</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-02 -->
-
-            <div id="modal-03" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Clouds</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Design</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-03 -->
-
-            <div id="modal-04" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Beetle</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-04 -->
-
-            <div id="modal-05" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Lighthouse</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Web Development</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-05 -->
-
-            <div id="modal-06" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-salad.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Salad</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
+            
             <!-- /modal-06 -->
 
             <!-- modal popups - end
